Add train_steps option

--- a/config/train.sample.yml
+++ b/config/train.sample.yml
@@ -18,6 +18,9 @@ run:
   # (optional) Save summaries every this many steps.
   save_summary_steps: 100
 
+  # (optional) Train for this many steps. If not set, train forever.
+  train_steps: 1000000
+
   # (optional) Evaluate every this many steps.
   eval_steps: 10000
 
