Update C++ example compilation to work with TensorFlow 1.4

--- a/examples/cpp/Makefile
+++ b/examples/cpp/Makefile
@@ -4,9 +4,10 @@ CXXFLAGS=-std=c++11 \
 	-I${TF_DIR} \
 	-I${TF_DIR}/bazel-genfiles \
 	-I${TF_DIR}/bazel-tensorflow/external/eigen_archive \
-	-I${TF_DIR}/bazel-tensorflow/external/protobuf/src
+	-I${TF_DIR}/bazel-tensorflow/external/protobuf_archive/src \
+	-I${TF_DIR}/bazel-tensorflow/external/nsync/public/
 LDFLAGS=-L${TF_DIR}/bazel-bin/tensorflow
-LDLIBS=-ltensorflow_opennmt
+LDLIBS=-ltensorflow_opennmt -ltensorflow_framework
 
 TARGET=main
 
