--- a/config/sample.yml
+++ b/config/sample.yml
@@ -1,15 +1,15 @@
 # The directory where models and summaries will be saved. It is created if it does not exist.
-model_dir: "ende"
+model_dir: toy-ende
 
 data:
-  train_features_file: "data/ende/src-train.txt"
-  train_labels_file: "data/ende/tgt-train.txt"
-  eval_features_file: "data/ende/src-val.txt"
-  eval_labels_file: "data/ende/tgt-val.txt"
+  train_features_file: data/toy-ende/src-train.txt
+  train_labels_file: data/toy-ende/tgt-train.txt
+  eval_features_file: data/toy-ende/src-val.txt
+  eval_labels_file: data/toy-ende/tgt-val.txt
 
   # (optional) Models may require additional resource files (e.g. vocabularies).
-  source_words_vocabulary: "data/ende/src-vocab.txt"
-  target_words_vocabulary: "data/ende/tgt-vocab.txt"
+  source_words_vocabulary: data/toy-ende/src-vocab.txt
+  target_words_vocabulary: data/toy-ende/tgt-vocab.txt
 
 # Model and optimization parameters.
 params:
@@ -23,7 +23,7 @@ params:
   #  * https://www.tensorflow.org/versions/master/api_guides/python/train#Decaying_the_learning_rate
   #  * opennmt/utils/decay.py
   # This value may change the semantics of other decay options. See the documentation or the code.
-  decay_type: "exponential_decay"
+  decay_type: exponential_decay
   # (optional unless decay_type is set) The learning rate decay rate.
   decay_rate: 0.7
   # (optional unless decay_type is set) Decay every this many steps.
@@ -36,7 +36,7 @@ params:
   minimum_learning_rate: 0.0001
   # (optional) Type of scheduled sampling (can be "constant", "linear", "exponential",
   # or "inverse_sigmoid", default: "constant").
-  scheduled_sampling_type: "constant"
+  scheduled_sampling_type: constant
   # (optional) Probability to read directly from the inputs instead of sampling categorically
   # from the output ids (default: 1).
   scheduled_sampling_read_probability: 1
