--- a/config/opennmt-defaults.yml
+++ b/config/opennmt-defaults.yml
@@ -1,7 +1,7 @@
 # Default OpenNMT parameters.
 
 params:
-  optimizer: SGD
+  optimizer: GradientDescentOptimizer
   learning_rate: 1.0
   clip_gradients: 5.0
   decay_type: "exponential_decay"
