Update the default configuration

--- a/config/opennmt-defaults.yml
+++ b/config/opennmt-defaults.yml
@@ -4,7 +4,7 @@ params:
   optimizer: GradientDescentOptimizer
   learning_rate: 1.0
   clip_gradients: 5.0
-  decay_type: "exponential_decay"
+  decay_type: exponential_decay
   decay_rate: 0.7
   decay_steps: 100000
   start_decay_steps: 500000
@@ -14,6 +14,7 @@ params:
 train:
   batch_size: 64
   save_checkpoints_steps: 5000
+  save_summary_steps: 50
   train_steps: 1000000
   eval_delay: 18000 # Every 5 hours.
   maximum_features_length: 50
