--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
   - "3.5"
 install:
-  - pip install tensorflow==1.4.0rc1
+  - pip install tensorflow==1.4.0
   - pip install pyyaml
   - pip install nose2
   - |
