--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - pip install nose2
   - |
         if [ "$TRAVIS_PYTHON_VERSION" == "3.5" ]; then
+            pip install astroid==1.5.3
             pip install pylint==1.7.4
             pip install sphinxcontrib-versioning
             pip install sphinx_rtd_theme
