Add option to build batches based on the number of tokens

--- a/config/opennmt-defaults.yml
+++ b/config/opennmt-defaults.yml
@@ -14,6 +14,7 @@ params:
 
 train:
   batch_size: 64
+  bucket_width: 1
   save_checkpoints_steps: 5000
   save_summary_steps: 50
   train_steps: 1000000
