--- a/config/opennmt-defaults.yml
+++ b/config/opennmt-defaults.yml
@@ -14,12 +14,15 @@ params:
 
 train:
   batch_size: 64
+  bucket_width: 1
   save_checkpoints_steps: 5000
   save_summary_steps: 50
   train_steps: 1000000
-  eval_delay: 18000 # Every 5 hours.
   maximum_features_length: 50
   maximum_labels_length: 50
+
+eval:
+  eval_delay: 18000 # Every 5 hours.
 
 infer:
   batch_size: 30
