--- a/config/opennmt-defaults.yml
+++ b/config/opennmt-defaults.yml
@@ -1,4 +1,4 @@
-# Default OpenNMT parameters.
+# Default OpenNMT parameters from the Lua version.
 
 params:
   optimizer: GradientDescentOptimizer
@@ -20,9 +20,10 @@ train:
   train_steps: 1000000
   maximum_features_length: 50
   maximum_labels_length: 50
+  sample_buffer_size: 1000000  # Consider setting this to the training dataset size.
 
 eval:
-  eval_delay: 18000 # Every 5 hours.
+  eval_delay: 18000  # Every 5 hours.
 
 infer:
   batch_size: 30
