Update OpenNMTTokenizer plugin to v1.1.0

--- a/config/tokenization/sample.yml
+++ b/config/tokenization/sample.yml
@@ -6,6 +6,7 @@ joiner: ￭
 joiner_annotate: false
 joiner_new: false
 case_feature: false
+no_substitution: false
 segment_case: false
 segment_numbers: false
 segment_alphabet_change: false
