--- a/config/sample.yml
+++ b/config/sample.yml
@@ -82,7 +82,7 @@ train:
   # (optional) The width of the length buckets to select batch candidates from (default: 5).
   bucket_width: 5
   # (optional) The number of threads to use for processing data in parallel (default: 4).
-  num_parallel_process_calls: 4
+  num_threads: 4
   # (optional) The number of elements from which to sample during shuffling (default: 1000000).
   # Consider setting this to the number of training examples.
   sample_buffer_size: 1000000
@@ -91,8 +91,8 @@ train:
 eval:
   # (optional) The batch size to use (default: train value or 30 if not applicable).
   batch_size: 30
-  # (optional) The number of threads to use for processing data in parallel (default: 4).
-  num_parallel_process_calls: 4
+  # (optional) The number of threads to use for processing data in parallel (default: 1).
+  num_threads: 1
   # (optional) Evaluate every this many seconds (default: 18000).
   eval_delay: 7200
   # (optional) Save evaluation predictions in model_dir/eval/.
@@ -106,6 +106,6 @@ infer:
   # (optional) The batch size to use (default: 1).
   batch_size: 10
   # (optional) The number of threads to use for processing data in parallel (default: 1).
-  num_parallel_process_calls: 4
+  num_threads: 1
   # (optional) For compatible models, the number of hypotheses to output (default: 1).
   n_best: 1
