--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: python
 python:
   - "2.7"
+  - "3.4"
   - "3.5"
+  - "3.6"
+env:
+  - MAIN_PYTHON_VERSION="3.6"
 addons:
   apt:
     sources:
@@ -14,11 +18,12 @@ addons:
       - cmake-data
       - libboost-python-dev
 before_install:
+  - pip install --upgrade numpy
   - pip install tensorflow==1.5.0
   - pip install pyyaml
   - pip install nose2
   - |
-        if [ "$TRAVIS_PYTHON_VERSION" == "3.5" ]; then
+        if [ "$TRAVIS_PYTHON_VERSION" == "$MAIN_PYTHON_VERSION" ]; then
             pip install pylint==1.8.2
             pip install sphinxcontrib-versioning
             pip install sphinx_rtd_theme
@@ -33,10 +38,10 @@ install:
   - cd ..
 script:
   - nose2
-  - if [ "$TRAVIS_PYTHON_VERSION" == "3.5" ]; then pylint opennmt/ bin/; fi
+  - if [ "$TRAVIS_PYTHON_VERSION" == "$MAIN_PYTHON_VERSION" ]; then pylint opennmt/ bin/; fi
 after_success:
   - |
-        if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_PYTHON_VERSION" == "3.5" ]; then
+        if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_PYTHON_VERSION" == "$MAIN_PYTHON_VERSION" ]; then
             eval "$(ssh-agent -s)"; touch docs/key; chmod 0600 docs/key
             openssl aes-256-cbc -K $encrypted_6389583f9019_key -iv $encrypted_6389583f9019_iv -in docs/key.enc -out docs/key -d && ssh-add docs/key
             git config --global user.email "builds@travis-ci.com"
