--- a/config/sample.yml
+++ b/config/sample.yml
@@ -6,8 +6,11 @@
 model_dir: toy-ende
 
 data:
+  # (required for train_and_eval and train run types).
   train_features_file: data/toy-ende/src-train.txt
   train_labels_file: data/toy-ende/tgt-train.txt
+
+  # (required for train_end_eval and eval run types).
   eval_features_file: data/toy-ende/src-val.txt
   eval_labels_file: data/toy-ende/tgt-val.txt
 
