--- a/config/sample.yml
+++ b/config/sample.yml
@@ -92,9 +92,9 @@ train:
   bucket_width: 5
   # (optional) The number of threads to use for processing data in parallel (default: 4).
   num_threads: 4
-  # (optional) The number of elements from which to sample during shuffling (default: 1000000).
+  # (optional) The number of elements from which to sample during shuffling (default: 500000).
   # Consider setting this to the number of training examples.
-  sample_buffer_size: 1000000
+  sample_buffer_size: 500000
 
 # (optional) Evaluation options.
 eval:
