--- a/config/sample.yml
+++ b/config/sample.yml
@@ -95,6 +95,8 @@ train:
   # (optional) The number of elements from which to sample during shuffling (default: 500000).
   # Consider setting this to the number of training examples.
   sample_buffer_size: 500000
+  # (optional) The number of batches to prefetch asynchronously (default: 1).
+  prefetch_buffer_size: 1
 
 # (optional) Evaluation options.
 eval:
@@ -102,6 +104,8 @@ eval:
   batch_size: 30
   # (optional) The number of threads to use for processing data in parallel (default: 1).
   num_threads: 1
+  # (optional) The number of batches to prefetch asynchronously (default: 1).
+  prefetch_buffer_size: 1
   # (optional) Evaluate every this many seconds (default: 18000).
   eval_delay: 7200
   # (optional) Save evaluation predictions in model_dir/eval/.
@@ -116,5 +120,7 @@ infer:
   batch_size: 10
   # (optional) The number of threads to use for processing data in parallel (default: 1).
   num_threads: 1
+  # (optional) The number of batches to prefetch asynchronously (default: 1).
+  prefetch_buffer_size: 1
   # (optional) For compatible models, the number of hypotheses to output (default: 1).
   n_best: 1
