Fix Tokenizer build
WITH_PYTHON_BINDINGS option was overriden by the Tokenizer
CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 
-set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_BUILD_TYPE Release)
 set(LIB_ONLY ON)
-set(WITH_PYTHON_BINDINGS ON)
+set(WITH_PYTHON_BINDINGS ON CACHE BOOL "enable Python bindings")
 
 add_subdirectory(third_party/OpenNMTTokenizer)
