--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ script:
   - if [ "$TRAVIS_PYTHON_VERSION" == "$MAIN_PYTHON_VERSION" ]; then pylint opennmt/ bin/; fi
 after_success:
   - |
-        if [[ "$TRAVIS_PULL_REQUEST" == "false" && "$TRAVIS_PYTHON_VERSION" == "$MAIN_PYTHON_VERSION" && ("$TRAVIS_BRANCH" == "master" || -n $TRAVIS_TAG) ]]; then
+        if [[ "$TRAVIS_PYTHON_VERSION" == "$MAIN_PYTHON_VERSION" && -n $TRAVIS_TAG ]]; then
             eval "$(ssh-agent -s)"; touch docs/key; chmod 0600 docs/key
             openssl aes-256-cbc -K $encrypted_6389583f9019_key -iv $encrypted_6389583f9019_iv -in docs/key.enc -out docs/key -d && ssh-add docs/key
             git config --global user.email "builds@travis-ci.com"
