--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
 language: python
 python:
   - "2.7"
-  - "3.4"
-  - "3.5"
   - "3.6"
 env:
   global:
     - MAIN_PYTHON_VERSION="2.7"
     - MAIN_TF_VERSION="1.6.*"
   matrix:
+    - TF_VERSION="1.4.*"
+    - TF_VERSION="1.5.*"
     - TF_VERSION="1.6.*"
     - TF_VERSION="1.7.*"
+matrix:
+  exclude:
+    - python: "3.6"
+      env: TF_VERSION="1.4.*"
+    - python: "3.6"
+      env: TF_VERSION="1.5.*"
 addons:
   apt:
     sources:
