--- a/.travis.yml
+++ b/.travis.yml
@@ -17,21 +17,8 @@ matrix:
       env: TF_VERSION="1.4.*"
     - python: "3.6"
       env: TF_VERSION="1.5.*"
-addons:
-  apt:
-    sources:
-      - george-edison55-precise-backports
-      - ubuntu-toolchain-r-test
-    packages:
-      - gcc-4.8
-      - g++-4.8
-      - cmake
-      - cmake-data
-      - libboost-python-dev
 before_install:
   - pip install tensorflow==$TF_VERSION
-  - pip install pyyaml
-  - pip install nose2
   - |
         if [[ "$TRAVIS_PYTHON_VERSION" == "$MAIN_PYTHON_VERSION" && "$TF_VERSION" == "$MAIN_TF_VERSION" ]]; then
             pip install pylint==1.8.2
@@ -42,15 +29,8 @@ before_install:
             pip install wheel
             pip install twine
         fi
-install:
-  - export CXX="g++-4.8" CC="gcc-4.8"
-  - mkdir build && cd build
-  - cmake ..
-  - make
-  - export PYTHONPATH="$PYTHONPATH:$PWD/third_party/OpenNMTTokenizer/bindings/python/"
-  - cd ..
 script:
-  - nose2
+  - python setup.py test
   - if [ "$TRAVIS_PYTHON_VERSION" == "$MAIN_PYTHON_VERSION" && "$TF_VERSION" == "$MAIN_TF_VERSION" ]; then pylint opennmt/; fi
 after_success:
   - |
