--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ matrix:
       env: TF_VERSION="1.5.*"
 before_install:
   - pip install tensorflow==$TF_VERSION
+  - pip install -e .[tests]
   - |
         if [[ "$TRAVIS_PYTHON_VERSION" == "$MAIN_PYTHON_VERSION" && "$TF_VERSION" == "$MAIN_TF_VERSION" ]]; then
             pip install pylint==1.8.2
@@ -30,7 +31,7 @@ before_install:
             pip install twine
         fi
 script:
-  - python setup.py test
+  - nose2
   - if [[ "$TRAVIS_PYTHON_VERSION" == "$MAIN_PYTHON_VERSION" && "$TF_VERSION" == "$MAIN_TF_VERSION" ]]; then pylint opennmt/; fi
 after_success:
   - |
