Optionally replace unknown target tokens using attention

--- a/config/sample.yml
+++ b/config/sample.yml
@@ -67,6 +67,9 @@ params:
   length_penalty: 0.2
   # (optional) Maximum decoding iterations before stopping (default: 250).
   maximum_iterations: 200
+  # (optional) Replace unknown target tokens by the original source token with the
+  # highest attention (default: false).
+  replace_unknown_target: false
 
 # Training options.
 train:
