--- a/config/sample.yml
+++ b/config/sample.yml
@@ -98,8 +98,9 @@ train:
   # (optional) The number of elements from which to sample during shuffling (default: 500000).
   # Set 0 or null to disable shuffling, -1 to match the number of training examples.
   sample_buffer_size: 500000
-  # (optional) The number of batches to prefetch asynchronously (default: 1).
-  prefetch_buffer_size: 1
+  # (optional) The number of batches to prefetch asynchronously. If not set, use an
+  # automatically tuned value on TensorFlow 1.8+ and 1 on older versions. (default: null).
+  prefetch_buffer_size: null
 
 # (optional) Evaluation options.
 eval:
