Add weights regularization penalties

--- a/config/sample.yml
+++ b/config/sample.yml
@@ -32,6 +32,10 @@ params:
   param_init: 0.1
   # (optional) Maximum gradients norm (default: None).
   clip_gradients: 5.0
+  # (optional) Weights regularization penalty (default: null).
+  regularization:
+    type: l2  # can be "l1", "l2", "l1_l2" (case-insensitive).
+    scale: 1e-4  # if using "l1_l2" regularization, this should be a YAML list.
   # (optional) Average loss in the time dimension in addition to the batch dimension (default: False).
   average_loss_in_time: false
   # (optional) The type of learning rate decay (default: None). See:
