--- a/config/sample.yml
+++ b/config/sample.yml
@@ -121,8 +121,8 @@ eval:
   # (optional) Evalutator or list of evaluators that are called on the saved evaluation predictions.
   # Available evaluators: BLEU, BLEU-detok, ROUGE
   external_evaluators: BLEU
-  # (optional) Export model after evaluation (default: true).
-  export: true
+  # (optional) Model exporter(s) to use after evaluation: last or null (default: last).
+  exporters: last
 
 # (optional) Inference options.
 infer:
