--- a/config/sample.yml
+++ b/config/sample.yml
@@ -124,7 +124,8 @@ eval:
   # (optional) Evalutator or list of evaluators that are called on the saved evaluation predictions.
   # Available evaluators: BLEU, BLEU-detok, ROUGE
   external_evaluators: BLEU
-  # (optional) Model exporter(s) to use after evaluation: last or null (default: last).
+  # (optional) Model exporter(s) to use during the training and evaluation loop:
+  # last, final, best, or null (default: last).
   exporters: last
 
 # (optional) Inference options.
