--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
     - TF_VERSION="1.6.*"
     - TF_VERSION="1.7.*"
     - TF_VERSION="1.8.*"
+    - TF_VERSION="1.9.*"
 matrix:
   exclude:
     - python: "3.6"
