--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,12 @@ matrix:
       env: TF_VERSION="1.4.*"
     - python: "3.6"
       env: TF_VERSION="1.5.*"
+    - python: "3.6"
+      env: TF_VERSION="1.6.*"
+    - python: "3.6"
+      env: TF_VERSION="1.7.*"
+    - python: "3.6"
+      env: TF_VERSION="1.8.*"
 before_install:
   - pip install tensorflow==$TF_VERSION
   - pip install -e .[tests]
