Set a default configuration key for the alignment file

--- a/config/sample.yml
+++ b/config/sample.yml
@@ -10,6 +10,9 @@ data:
   train_features_file: data/toy-ende/src-train.txt
   train_labels_file: data/toy-ende/tgt-train.txt
 
+  # (optional) Pharaoh alignments of the training files.
+  train_alignments: data/toy-ende/alignments-train.txt
+
   # (required for train_end_eval and eval run types).
   eval_features_file: data/toy-ende/src-val.txt
   eval_labels_file: data/toy-ende/tgt-val.txt
