--- a/config/sample.yml
+++ b/config/sample.yml
@@ -1,6 +1,6 @@
 # WARNING:
 # Do not use this file as is! It only lists and documents available options
-# without caring about their consistency.
+# without caring about their consistency. Consider using --auto_config instead.
 
 # The directory where models and summaries will be saved. It is created if it does not exist.
 model_dir: toy-ende
