--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
 env:
   global:
-    - LATEST_TF_VERSION="1.11.*"
+    - LATEST_TF_VERSION="1.12.*"
   matrix:
     - TF_VERSION="1.4.*"
     - TF_VERSION="1.5.*"
@@ -12,6 +12,7 @@ env:
     - TF_VERSION="1.8.*"
     - TF_VERSION="1.9.*"
     - TF_VERSION="1.10.*"
+    - TF_VERSION="1.11.*"
     - TF_VERSION="$LATEST_TF_VERSION"
 before_install:
   - pip install tensorflow==$TF_VERSION
