--- a/config/opennmt-defaults.yml
+++ b/config/opennmt-defaults.yml
@@ -6,8 +6,9 @@ params:
   param_init: 0.1
   clip_gradients: 5.0
   decay_type: exponential_decay
-  decay_rate: 0.7
-  decay_steps: 100000
+  decay_params:
+    decay_rate: 0.7
+    decay_steps: 100000
   start_decay_steps: 500000
   beam_width: 5
   maximum_iterations: 250
