--- a/config/optim/adafactor.yml
+++ b/config/optim/adafactor.yml
@@ -8,7 +8,8 @@ params:
     clipping_threshold: 1.0
   learning_rate: 2.0  # The scale constant.
   clip_gradients: null
-  decay_type: rsqrt_decay
+  decay_type: rsqrt_decay_v2
+  decay_params:
+    warmup_steps: 10000
   decay_step_duration: 8  # 1 decay step is 8 training steps.
-  decay_steps: 10000  # Warmup steps (= 80000 training steps).
   start_decay_steps: 0
