--- a/config/optim/adam_with_noam_decay.yml
+++ b/config/optim/adam_with_noam_decay.yml
@@ -4,8 +4,9 @@ params:
   optimizer: AdamOptimizer
   learning_rate: 1.0 # The scale constant.
   clip_gradients: null
-  decay_type: noam_decay
-  decay_rate: 512 # Model dimension.
   decay_step_duration: 8 # 1 decay step is 8 training steps.
-  decay_steps: 2000 # Warmup steps (= 16000 training steps).
+  decay_type: noam_decay_v2
+  decay_params:
+    model_dim: 512
+    warmup_steps: 2000 # (= 16000 training steps).
   start_decay_steps: 0
