--- a/config/optim/sgd_with_decay.yml
+++ b/config/optim/sgd_with_decay.yml
@@ -3,6 +3,7 @@ params:
   learning_rate: 1.0
   clip_gradients: 5.0
   decay_type: exponential_decay
-  decay_rate: 0.7
-  decay_steps: 100000
+  decay_params:
+    decay_rate: 0.7
+    decay_steps: 100000
   start_decay_steps: 500000
