Revert "Install pandas in Travis (#310)"
This reverts commit 24b7a2f0ccf3110a47330cb2298a85ae928f7e21.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
     - TF_VERSION="1.11.*"
     - TF_VERSION="$LATEST_TF_VERSION"
 before_install:
-  - pip install pandas tensorflow==$TF_VERSION
+  - pip install tensorflow==$TF_VERSION
   - pip install -e .[tests]
 script:
   - nose2
