--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,17 @@ before_install:
   - pip install tensorflow==$TF_VERSION
   - pip install -e .[tests]
 script:
-  - nose2
+  - nose2 -s opennmt/tests
 matrix:
   include:
+    - python: "3.6"
+      env:
+        - TF_VERSION="2.0"
+      before_install:
+        - pip install tf-nightly-2.0-preview
+        - pip install -e .[tests]
+      script:
+        - nose2 -s opennmt/v2/tests
     - python: "3.6"
       env:
         - TF_VERSION="$LATEST_TF_VERSION"
